--- a/app/src/main/res/color/nav_drawer_item_colors.xml
+++ b/app/src/main/res/color/nav_drawer_item_colors.xml
@@ -2,7 +2,7 @@
 <selector
         xmlns:android="http://schemas.android.com/apk/res/android">
     <item
-            android:color="@color/colorSecondaryLight"
+            android:color="@color/navDrawerItemBg"
             android:state_checked="true"/>
     <item
             android:color="@android:color/transparent"/>
