--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -24,13 +24,17 @@
 
     <color name="horizontalDividerBackground">#dadce0</color>
 
-    <!-- Colors used as a pallette for pie chart -->
-    <color name="pie_chart_color_1">#80ba68c8</color>
-    <color name="pie_chart_color_2">#804dd0e1</color>
-    <color name="pie_chart_color_3">#8066bb6a</color>
-    <color name="pie_chart_color_4">#80ffb74d</color>
-    <color name="pie_chart_color_5">#80e57373</color>
+    <color name="navDrawerItemBg">#ffddc1</color>
+    <color name="navDrawerTextOnSecondary">@color/colorOnSecondary</color>
+    <color name="navDrawerTextOnSurface">@color/colorOnSurface</color>
 
-    <color name="pie_chart_text_color">#212121</color>
+    <!-- Colors used as a palette for pie chart -->
+    <color name="pieChartColor1">#80ba68c8</color>
+    <color name="pieChartColor2">#804dd0e1</color>
+    <color name="pieChartColor3">#8066bb6a</color>
+    <color name="pieChartColor4">#80ffb74d</color>
+    <color name="pieChartColor5">#80e57373</color>
+
+    <color name="pieChartTextColor">#212121</color>
 
 </resources>
