--- a/app/src/main/res/layout/fragment_recycler_sorting.xml
+++ b/app/src/main/res/layout/fragment_recycler_sorting.xml
@@ -2,7 +2,8 @@
 <androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="wrap_content"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:id="@+id/root_recycler_sorting">
 
     <LinearLayout
         android:id="@+id/root"
